--- a/website.html
+++ b/website.html
@@ -11,7 +11,9 @@
   </head>
 
   <body class="body">
-
+      <div id="background">
+        <img src="images/Winter_sunrise_in_the_mountains.jpg" class="stretch" alt="" />
+      </div>
       <div class ="container-fluid">
           <div class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: transparent">
 
