Changed to flashing background

--- a/about.html
+++ b/about.html
@@ -4,16 +4,12 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>About</title>
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="style.css">
       <script src="animations.js"></script>
   </head>
 
   <body class="body">
-    <div id="background">
-      <img src="images/Winter_sunrise_in_the_mountains.jpg" class="stretch" alt="" />
-    </div>
       <div class ="container-fluid">
           <div class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: transparent">
 
@@ -34,7 +30,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Resume</a>
+                          <a class="nav-link" href="Resume.pdf">Resume</a>
                       </li>
                   </ul>
               </div>
