Added pic and cleaned up body format

--- a/website.html
+++ b/website.html
@@ -49,11 +49,12 @@
           </section>
 <!-- ABOUT -->
         <section id="about" class="bg-light">
+          <img src="images/profile.jpg" class = "rounded-circle" alt="Profile">
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <h2>About Me</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+                <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
               </div>
             </div>
           </div>
@@ -63,8 +64,8 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-8 mx-auto">
-                <h2>Contact</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+                <h3>Contact</h3>
+                <p class="contact-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
               </div>
             </div>
           </div>
