--- a/website.html
+++ b/website.html
@@ -6,6 +6,7 @@
       <title>Vincent Villacorta</title>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="website_style.css">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
       <script src="animations.js"></script>
   </head>
 
@@ -54,10 +55,25 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <h2>About Me</h2>
-                <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+                <p class="about-text">Hello there! I am currently a fourth year student at the University of California, Irvine working towards my Computer Science and Engineering degree.
+                   I am seeking software development roles; I enjoy front-end programming, but I am confident for back-end and full-stack roles as well!
+                   </p>
               </div>
             </div>
           </div>
+
+          <div class = "icons">
+            <i class="devicon-cplusplus-plain-wordmark colored"></i>
+            <i class="devicon-c-plain-wordmark colored"></i>
+            <i class="devicon-csharp-plain-wordmark colored"></i>
+            <i class="devicon-java-plain-wordmark colored"></i>
+            <i class="devicon-python-plain-wordmark colored"></i>
+            <i class="devicon-html5-plain-wordmark colored"></i>
+            <i class="devicon-css3-plain-wordmark colored"></i>
+            <i class="devicon-javascript-plain colored"></i>
+
+          </div>
+
         </section>
 <!-- CONTACT -->
         <section id="contact" class="bg-dark">
