--- a/website.html
+++ b/website.html
@@ -15,11 +15,9 @@
 <!-- NAVBAR -->
       <div class ="container-fluid">
           <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" style="background-color: #000000;">
-
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
                   <span class="navbar-toggler-icon"></span>
               </button>
-
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ml-auto">
                       <li class="nav-item-home">
@@ -49,41 +47,46 @@
             </div>
           </section>
 <!-- ABOUT -->
-        <section id="about" class="bg-light">
-          <img src="images/profile.jpg" class = "rounded-circle" alt="Profile">
+        <section id="about">
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <h2>About Me</h2>
-                <p class="about-text">Hello there! I am currently a fourth year student at the University of California, Irvine working towards my Computer Science and Engineering degree.
-                   I am seeking software development roles; I enjoy front-end programming, but I am confident for back-end and full-stack roles as well!
-                   </p>
+              <div class="col-4">
+                <div class="card image-card">
+                  <img src="images/profile.jpg" class = "rounded-circle" alt="Profile">
+                </div>
+              </div>
+              <div class="col-xl-8 flex">
+                <div class="card about-card">
+                  <h2>About Me</h2>
+                  <p class="about-text">Hello there! I am currently a fourth year student at the University of California, Irvine working towards my Computer Science and Engineering degree.
+                     I am seeking software development roles; I enjoy front-end programming, but I am confident for back-end and full-stack roles as well!
+                     </p>
+                </div>
               </div>
             </div>
+
+          <div class="row">
+          <div class="col-lg-12">
+          <div class = "card icons-card">
+            <div class = "card-body text-center justify-content-center">
+              <i class="devicon-cplusplus-plain-wordmark colored"></i>
+              <i class="devicon-c-plain-wordmark colored"></i>
+              <i class="devicon-csharp-plain-wordmark colored"></i>
+              <i class="devicon-java-plain-wordmark colored"></i>
+              <i class="devicon-python-plain-wordmark colored"></i>
+              <i class="devicon-html5-plain-wordmark colored"></i>
+              <i class="devicon-css3-plain-wordmark colored"></i>
+              <i class="devicon-javascript-plain colored"></i>
+            </div>
           </div>
-
-          <div class = "icons">
-            <i class="devicon-cplusplus-plain-wordmark colored"></i>
-            <i class="devicon-c-plain-wordmark colored"></i>
-            <i class="devicon-csharp-plain-wordmark colored"></i>
-            <i class="devicon-java-plain-wordmark colored"></i>
-            <i class="devicon-python-plain-wordmark colored"></i>
-            <i class="devicon-html5-plain-wordmark colored"></i>
-            <i class="devicon-css3-plain-wordmark colored"></i>
-            <i class="devicon-javascript-plain colored"></i>
-
           </div>
-
+          </div>
+          </div>
         </section>
 <!-- CONTACT -->
         <section id="contact" class="bg-dark">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
+          <div class="contact-box">
                 <h3>Contact</h3>
-                <p class="contact-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
-              </div>
-            </div>
           </div>
         </section>
 
