--- a/website.html
+++ b/website.html
@@ -4,94 +4,60 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Vincent Villacorta</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link rel="stylesheet" href="website_style.css">
-      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
       <script src="animations.js"></script>
   </head>
 
-  <body class="body">
+  <body class="body" >
 
-<!-- NAVBAR -->
-      <div class ="container-fluid">
-          <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" style="background-color: #000000;">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ml-auto">
-                      <li class="nav-item-home">
-                        <a class="nav-link"  href="#home">Home</a>
-                      </li>
-                      <li class="nav-item-about">
-                        <a class="nav-link" href="#about">About</a>
-                      </li>
-                      <li class="nav-item-contact">
-                        <a class="nav-link" href="#contact">Contact</a>
-                      </li>
-                      <li class="nav-item-resume">
-                        <a class="nav-link" href="Resume.pdf">Resume</a>
-                      </li>
-                  </ul>
-              </div>
-            </div>
+    <section id = "intro-section">
+      <div class="animated-name">
+          <h1>Vincent Villacorta</h1>
+          <p>Software Developer</p>
+      </div>
+      <div class="animated-title">
+      </div>
+    </section>
+
+    <section id = "main-section">
+        <nav class="navbar navbar-expand-lg ">
+          <span class="navbar-brand">V V</span>
+        </nav>
+
+      <div class = "row">
+        <div class="col-sm">
+          Place Animation Here
         </div>
+        <div class="col-sm">
+          <div class="jumbotron">
+            <h1 class="display-4">Welcome to my website!</h1>
+            <p>I am a software developer and recent graduate from the University of California, Irvine (B.S. in Computer Science and Engineering).</p>
+            <p>I am currently searching for a software engineering role. Please see my contacts and links below if you want to connect!</p>
+          </div>
+        </div>
+      </div>
 
-<!-- HOME -->
-          <section id="home">
-            <div class="animated-name flex-container">
-                <h1>Vincent Villacorta</h1>
-                  <div class="animated-title">
-                    <h2>Software Developer</h2>
-                  </div>
+      <div class = "row">
+        <div class="card">
+          <div class= "row">
+            <div class="col link-col">
+              <img src="images/Gmail_logo.png">
             </div>
-          </section>
-<!-- ABOUT -->
-        <section id="about">
-          <div class="container">
-            <div class="row">
-              <div class="col-4">
-                <div class="card image-card">
-                  <img src="images/profile.jpg" class = "rounded-circle" alt="Profile">
-                </div>
-              </div>
-              <div class="col-xl-8 flex">
-                <div class="card about-card">
-                  <h2>About Me</h2>
-                  <p class="about-text">Hello there! I am currently a fourth year student at the University of California, Irvine working towards my Computer Science and Engineering degree.
-                     I am seeking software development roles; I enjoy front-end programming, but I am confident for back-end and full-stack roles as well!
-                     </p>
-                </div>
-              </div>
+            <div class="col link-col">
+              <img src="images/LinkedIn_logo.png">
             </div>
-
-          <div class="row">
-          <div class="col-lg-12">
-          <div class = "card icons-card">
-            <div class = "card-body text-center justify-content-center">
-              <i class="devicon-cplusplus-plain-wordmark colored"></i>
-              <i class="devicon-c-plain-wordmark colored"></i>
-              <i class="devicon-csharp-plain-wordmark colored"></i>
-              <i class="devicon-java-plain-wordmark colored"></i>
-              <i class="devicon-python-plain-wordmark colored"></i>
-              <i class="devicon-html5-plain-wordmark colored"></i>
-              <i class="devicon-css3-plain-wordmark colored"></i>
-              <i class="devicon-javascript-plain colored"></i>
+            <div class="col link-col">
+              <img src="images/Resume_logo.png">
             </div>
           </div>
-          </div>
-          </div>
-          </div>
-        </section>
-<!-- CONTACT -->
-        <section id="contact" class="bg-dark">
-          <div class="contact-box">
-                <h3>Contact</h3>
-          </div>
-        </section>
+        </div>
+      </div>
+    </section>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
