--- a/website.html
+++ b/website.html
@@ -7,8 +7,8 @@
       <link rel="stylesheet" href="website_style.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
       <script src="animations.js"></script>
   </head>
@@ -18,46 +18,40 @@
     <section id = "intro-section">
       <div class="animated-name">
           <h1>Vincent Villacorta</h1>
-          <p>Software Developer</p>
+          <span id="target"></span>
+          <span id="cursor"></span>
       </div>
       <div class="animated-title">
       </div>
     </section>
 
     <section id = "main-section">
-        <nav class="navbar navbar-expand-lg ">
-          <span class="navbar-brand">V V</span>
+        <nav class="navbar navbar-expand-lg justify-content-center">
+          <span class="navbar-brand">Vincent Villacorta</span>
         </nav>
 
       <div class = "row">
-        <div class="col-sm">
-          Place Animation Here
-        </div>
-        <div class="col-sm">
-          <div class="jumbotron">
-            <h1 class="display-4">Welcome to my website!</h1>
-            <p>I am a software developer and recent graduate from the University of California, Irvine (B.S. in Computer Science and Engineering).</p>
-            <p>I am currently searching for a software engineering role. Please see my contacts and links below if you want to connect!</p>
+        <div class="col-sm col-txt">
+          <div class="jumbotron  justify-content-center ">
+            <h1 class="display-5  ">Welcome to my website!</h1>
+            <p>I am a Computer Science and Engineering graduate from the University of California, Irvine. While I have studied both hardware and software engineering for my degree, my passion remains true to programming. I enjoy creating code as a solution as well as tinkering with code as a creative outlet.</p>
+            <p>Outside of my professional interests, I am a PC/PS4 gamer with a bias towards RPG's and MMORPG's (hoping to dive into that industry someday as well). To get away from my desk during the day, I also have a big committment towards fitness (powerlifting, bodybuilding, etc.). I believe that a well-rounded lifestyle leads to better balance, health, and happiness :)</p>
+            <p>I am currently searching for a software development engineering role. I am comfortable with both back-end and front-end positions. Please see my contacts and links below if you wish to connect!</p>
           </div>
-        </div>
-      </div>
+          <div class= "card align-items-center">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary"><img src="images/Gmail_logo.png"></button>
+                  <button type="button" class="btn btn-secondary"><img src="images/LinkedIn_logo.png"></button>
+                  <button type="button" class="btn btn-secondary"><img src="images/Resume_logo.png"></button>
+                </div>
+          </div>
+          </div>
+        <div class="col-sm col-animated justify-content-center">
+          <img src="images/WebAnimation.gif">
 
-      <div class = "row">
-        <div class="card">
-          <div class= "row">
-            <div class="col link-col">
-              <img src="images/Gmail_logo.png">
-            </div>
-            <div class="col link-col">
-              <img src="images/LinkedIn_logo.png">
-            </div>
-            <div class="col link-col">
-              <img src="images/Resume_logo.png">
-            </div>
-          </div>
         </div>
+
       </div>
     </section>
-
   </body>
 </html>
