Seperated Files, Creating New Version of Website

--- a/V1/index.html
+++ b/V1/index.html
@@ -12,10 +12,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
       <script src="animations.js"></script>
-      <script>
- $(function () {
-  $('[data-toggle="tooltip"]').tooltip()
- });
+
 </script>
   </head>
 
@@ -24,8 +21,7 @@
     <section id = "intro-section">
       <div class="animated-name">
           <h1>Vincent Villacorta</h1>
-          <span id="target"></span>
-          <span id="cursor"></span>
+          <h2 class = "typing">Software Developer</h2>
       </div>
       <div class="animated-title">
       </div>
