Moved Menu to bottom

--- a/V2/index.html
+++ b/V2/index.html
@@ -7,10 +7,6 @@
       <link rel="stylesheet" href="index_style.css">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <script src="animations.js"></script>
-
-
-
-
   </head>
 
   <body class="body" >
@@ -19,20 +15,18 @@
     <script src=" https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 
-
     <div class="content">
-      <div class="text-box">
-        <h1>Hello.</h1>
-        <p1>I'm an aspiring software developer named Vince.</p1>
-      </div>
-      <div class="menu Row">
-        <a class="btn aboutme-btn" onclick = "aboutMe()"></a>
-        <a class="btn linkedin-btn" href = "https://www.linkedin.com/in/vincent-villacorta-b7a763161/" target="_blank"></a>
-        <a class="btn github-btn" href = "https://github.com/VincentVillacorta" target="_blank" ></a>
-        <a class="btn email-btn" href="mailto:vincentjvillacorta@gmail.com"></a>
-        <a class="btn resume-btn" href = "Resume.pdf" target="_blank"></a>
-      </div>
-
+        <div class="text-box">
+          <h1>Hello.</h1>
+          <p1>I'm an aspiring software developer named Vince.</p1>
+        </div>
+    </div>
+    <div class="menu">
+      <a class="btn aboutme-btn" onclick = "aboutMe()"></a>
+      <a class="btn linkedin-btn" href = "https://www.linkedin.com/in/vincent-villacorta-b7a763161/" target="_blank"></a>
+      <a class="btn github-btn" href = "https://github.com/VincentVillacorta" target="_blank" ></a>
+      <a class="btn email-btn" href="mailto:vincentjvillacorta@gmail.com"></a>
+      <a class="btn resume-btn" href = "Resume.pdf" target="_blank"></a>
     </div>
 
 
